test/chainsaw/authpolicy/only_authentication/authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  audience:
    - entraid_server
  issuerURI: https://fake.auth/entraid
  jwksURI: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
