test/chainsaw/authpolicy/only_authentication/wildcard-ingress.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: default-cert
  namespace: istio-gateways
spec:
  dnsNames:
    - foo.bar
  issuerRef:
    kind: ClusterIssuer
    name: cluster-issuer
  secretName: default-cert
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: application-wildcard-ingress
spec:
  selector:
    app: istio-ingress-external
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - "*"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: default-cert
        mode: SIMPLE
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: application-wildcard-ingress
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  gateways:
    - application-wildcard-ingress
  hosts:
    - "*"
  http:
    - match:
        - port: 80
      name: redirect-to-https
      redirect:
        redirectCode: 308
        scheme: https
    - name: default-app-route
      route:
        - destination:
            host: application
            port:
              number: 5678
