test/chainsaw/authpolicy/only_authentication/authpolicy-assert.yaml
# RequestAuthentication
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy
spec:
  jwtRules:
    - audiences:
        - entraid_server
      forwardOriginalToken: true
      issuer: http://mock-oauth2.auth:8080/entraid
      jwksUri: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (require-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-require-auth
spec:
  rules:
    - to:
        - operation:
            paths:
              - '*'
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
  selector:
    matchLabels:
      app: application
---
